fixed spacing for toggle on smaller screens

--- a/resources/editor/editor.css
+++ b/resources/editor/editor.css
@@ -486,15 +486,15 @@
     height: 60px;
   }
   
-  /* Hide default HTML checkbox */
-  .switch input {
+/* Hide default HTML checkbox */
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
-  
-  /* The slider */
-  .slider {
+}
+
+/* The slider */
+.slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -504,9 +504,9 @@
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  
-  .slider:before {
+}
+
+.slider:before {
     position: absolute;
     content: "";
     height: 26px;
@@ -516,27 +516,66 @@
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  
-  input:checked + .slider {
+}
+
+input:checked + .slider {
     background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
+}
+
+input:focus + .slider {
     box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
+}
+
+input:checked + .slider:before {
     -webkit-transform: translateY(-26px);
     -ms-transform: translateY(-26px);
     transform: translateY(-26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
+}
+
+/* Rounded sliders */
+.slider.round {
     border-radius: 34px;
-  }
-  
-  .slider.round:before {
+}
+
+.slider.round:before {
     border-radius: 50%;
-  }
+}
+
+.lilLbl {
+    display: none;
+}
+  
+@media (max-width: 1199px) {
+    #statflip-switch {
+        position: unset;
+        margin-bottom: 8px;
+    }
+
+    .switch {
+        width: 60px;
+        height: 30px;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+    .slider:before {
+        left: 4px;
+        bottom: 2px;;
+    }
+
+    #statflip-switch br {
+        display: none;
+    }
+
+    .lilLbl {
+        display: unset;
+    }
+
+    .bigLbl {
+        display: none;
+    }
+}
